--- a/base/build.gradle
+++ b/base/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     api project(':TelinkBleMeshLib')
     api 'com.google.android.material:material:1.0.0'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'com.google.android.material:material:1.0.0'
     api 'androidx.recyclerview:recyclerview:1.1.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
     api 'com.qmuiteam:qmui:2.0.0-alpha10'
