--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,8 @@ android {
             }
         }
         beta {
-            versionCode 1
-            versionName "1.0"
+            versionCode 4
+            versionName "1.0.4"
             buildConfigField "boolean", "IS_PUBLIC", 'false'
             ndk {
                 abiFilters 'armeabi-v7a'
@@ -105,4 +105,6 @@ dependencies {
     implementation project(':phototable')
 //    implementation 'com.huawei.multimedia:camerakit:1.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
