--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,21 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
-        android:allowBackup="true"
         android:name="com.zlm.base.TelinkMeshApplication"
-        android:requestLegacyExternalStorage="true"
-        tools:ignore="GoogleAppIndexingWarning"
+        android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ConnectActivity"/>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".SelectLangActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".AgreementActivity" />
+        <activity android:name=".ConnectActivity" />
         <activity android:name=".PrivacyActivity" />
         <activity android:name=".RetrieveActivity" />
         <activity android:name=".RegisterActivity" />
@@ -31,12 +35,14 @@
         <activity android:name=".CameraActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".DolwnLoadAppService"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
