--- a/base/build.gradle
+++ b/base/build.gradle
@@ -39,6 +39,6 @@ dependencies {
     api 'com.jakewharton:butterknife:7.0.0'
     api 'com.squareup.retrofit2:retrofit:2.2.0'
     api 'com.squareup.retrofit2:converter-gson:2.2.0'
-//    api 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     api 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
